--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 <!-- Supported Aircraft Section -->
 <section id="aircraft" class="aircraft">
   <div class="container">
-    <h2 class="section-title">Поддерживаемые типы ВС</h2>
+    <h2 class="section-title">Доступные типы ВС</h2>
 
     <div class="aircraft-table">
       <div class="aircraft-row header">
