--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="aircraft-cell right">PW307A</div>
       </div>
       <div class="aircraft-row">
-        <div class="aircraft-cell left">Falcon‑8X (в разработке)</div>
+        <div class="aircraft-cell left">Falcon‑8X</div>
         <div class="aircraft-cell right">PW307D</div>
       </div>
     </div>
